src/components/DropdownMenu/DropdownMenu.module.css
@keyframes contentShow {
  from {
    opacity: 0;
    transform: scale(0.96);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}
@keyframes contentHide {
  from {
    opacity: 1;
    transform: scale(1);
  }
  to {
    opacity: 0;
    transform: scale(0.96);
  }
}

.content {
  transform-origin: var(--kb-menu-content-transform-origin);
  animation: contentHide 250ms ease-in forwards;
}

.content[data-expanded] {
  animation: contentShow 250ms ease-out;
}

